# deathstar

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  alembic.ini  greptile.json  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 24be8cfc95d4_add_cascade_delete_to_messages_fk.py  8dded911ac73_initial_schema.py  a1b2c3d4e5f6_add_conversation_branches.py  a9b0c1d2e3f4_add_body_fetched_to_branch_prs.py  b0c1d2e3f4a5_add_linear_tables.py  b3c4d5e6f7a8_add_documents_table.py  (+4 more)
bootstrap/: cloud-init.yaml.tftpl
docker/: .dockerignore  control-api.Dockerfile  docker-compose.yml  entrypoint.sh
docs/: agent-system.md  architecture.md  cli.md  operations.md  provider-interface.md  real-time-events.md  security.md
scripts/: install-cli.sh  migrate_sqlite_to_postgres.py  put-provider-secret.sh
tests/: test_agent_repo_events.py  test_agent_runner.py  test_agent_service.py  test_agent_ws.py  test_backup.py  test_cli_config.py  test_conversations_branch.py  test_documents.py  test_event_bus.py  test_github_service.py  test_gitops.py  test_linear_poller.py  test_linear_service.py  test_linear_store.py  test_linear_webhooks.py  test_memory_distiller.py  test_models.py  test_providers.py  test_queue.py  test_routes.py  test_secrets.py  test_session.py  test_tool_guardrails.py  test_web_routes.py  test_webhooks.py  test_workflow.py  test_worktree.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+150 files in other folders)
