[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deathstar-ai"
dynamic = ["version"]
description = "Secure AWS-hosted remote AI coding workstation with a provider-agnostic local CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "DeathStar contributors" }]
dependencies = [
  "boto3>=1.34.0",
  "claude-agent-sdk>=0.1.0",
  "fastapi>=0.115.0",
  "google-auth>=2.29.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
  "unidiff>=0.7.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.5.0",
]

[project.scripts]
deathstar = "deathstar_cli.main:run_cli"

[tool.setuptools.packages.find]
where = ["cli", "server", "shared"]
include = ["deathstar_cli*", "deathstar_server*", "deathstar_shared*"]

[tool.setuptools.package-data]
deathstar_server = ["web/static/**/*", "web/dist/**/*"]

[tool.setuptools.dynamic]
version = {attr = "deathstar_shared.version.VERSION"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["cli", "server", "shared"]
addopts = "-ra"
asyncio_mode = "auto"
